# lrc-tools

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
lrc_tools/: lrc_vis_cli.py  processor_splitter.py  puller.py  visualizer_main.py  visualizer_player.py
